[project]
name = "langGraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.4",
    "python-dotenv>=1.2.1",
]
